mengubah logo pada footer

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <input type="text" placeholder="Sambal nya banyakin">
                         </div>
                     </div>
-                    <a href="" class="btn">Kirim</a>
+                    <a href="https://wa.me/+6282246417774" class="btn" target="_blank">Contact Whatsapp</a>
                 </form>
             </div>
             <div class="lokasi">
@@ -138,7 +138,9 @@
         </div>
     </section>
     <footer id="footer">
-        <h1>Soto Banjar Mami</h1>
+    <div class="logo">
+        <img src="./Image/20240816_074927.png" alt="">
+    </div>
         <div class="instagram">
             <a href="https://www.instagram.com/soto.banjar.mami/" target="_blank">@soto.banjar.mami</a>
         </div>
